button hover  fix on smaller screens

--- a/teststyle.css
+++ b/teststyle.css
@@ -554,6 +554,11 @@
      }
      .social{
      }
+     .navbar_contact:hover{
+        transition: background-color,transform 0.3s ;
+        transform: scale(0);
+    
+    }
 }
 @media screen and (max-width: 380px) {
     .about_text{
